# MachineLearning

./: pyproject.toml
reports/: LR1_ML.docx
source/: 21_VMz_Khaleev_ML_LAB1.ipynb  21_VMz_Khaleev_ML_LAB2.ipynb  21_VMz_Khaleev_ML_TASK1_pandas.ipynb  ML_LAB1.ipynb  ML_LAB1.py  ML_LAB2.ipynb  ML_TASK1_numpy.ipynb  ML_TASK1_pandas.ipynb  description.xlsx  gpt
source/5_titanic/: titanic3.xls
tasks/: README.txt
