[tool.poetry]
name = "machinelearning"
version = "0.1.0"
description = ""
authors = ["Aleksey Khaleev <aleksey52nn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
